# west-ai-agent

./: .dockerignore  .env.example  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
scripts/: rag-eval.mjs  (+19 more)
services/ai-service/: Dockerfile  README.md  pyproject.toml
services/ai-service/ai_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/ai-service/app/: __init__.py  main.py
services/ai-service/app/api/: router.py
services/ai-service/app/core/: config.py
services/ai-service/app/decision/: __init__.py  answer_generation.py  pipeline.py  policy.py  query_rewrite.py  retrieval.py  types.py
services/ai-service/app/providers/: __init__.py  base.py  ollama_provider.py  openai_like_provider.py  registry.py  vllm_provider.py
services/ai-service/app/routes/: __init__.py  health.py
services/ai-service/app/workflow/: __init__.py  graph.py  service.py  types.py
services/ai-service/tests/: test_api.py  test_decision_api.py  test_health.py  test_query_rewrite.py  test_retrieval_service.py  test_workflow_api.py
services/message-gateway/: Dockerfile  README.md  pyproject.toml
services/message-gateway/app/: __init__.py  main.py  state.py
services/message-gateway/app/core/: config.py
services/message-gateway/app/routes/: __init__.py  health.py  messages.py  presence.py
services/message-gateway/app/services/: __init__.py  delivery.py  message_ingest.py  message_store.py  presence.py  unread_counter.py
services/message-gateway/app/ws/: __init__.py  router.py
services/message-gateway/message_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/message-gateway/tests/: test_health.py  test_message_delivery.py
services/platform-api/: Dockerfile  README.md  pyproject.toml
services/platform-api/app/: __init__.py  main.py
services/platform-api/app/api/: __init__.py  router.py
services/platform-api/app/core/: config.py  db.py
services/platform-api/app/models/: __init__.py
services/platform-api/app/modules/: __init__.py
services/platform-api/app/routes/: __init__.py  health.py
services/platform-api/app/testing/: auth_utils.py
services/platform-api/platform_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/platform-api/tests/: test_health.py  test_postgres_wiring.py
services/platform-api/tests/core/: test_db_config.py
services/platform-api/tests/modules/: test_access_control_and_public_api.py
services/voice-realtime-service/: README.md  pyproject.toml
services/voice-realtime-service/app/: __init__.py  main.py
services/voice-realtime-service/app/api/: router.py
services/voice-realtime-service/app/core/: config.py
services/voice-realtime-service/app/events/: __init__.py  message_bridge.py
services/voice-realtime-service/app/nlu/: __init__.py  dictionaries.py  entity_normalizer.py
services/voice-realtime-service/app/orchestrator/: __init__.py  voice_orchestrator.py
services/voice-realtime-service/app/session/: __init__.py  service.py
services/voice-realtime-service/tests/: test_api.py  test_entity_normalizer.py  test_health.py  test_stt_pipeline.py  test_tts_pipeline.py  test_voice_orchestrator.py
services/voice-realtime-service/voice_realtime_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/worker-jobs/: Dockerfile  README.md  pyproject.toml
services/worker-jobs/app/: __init__.py  main.py  sinks.py  tasks.py
services/worker-jobs/tests/: test_infra_sinks.py  test_knowledge_jobs.py  test_main.py  test_sinks.py
services/worker-jobs/worker_jobs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+191 files in other folders)
